--- a/notebooks/Lab6.ipynb
+++ b/notebooks/Lab6.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Lab 4: Polymorphisms and Mutations"
+    "# Lab 6: Polymorphisms and Mutations"
    ]
   },
   {
@@ -26,9 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# imports\n",
@@ -47,79 +45,361 @@
    "source": [
     "## Part 1: Exploring polymorphisms in the UCSC Genome Browser\n",
     "\n",
-    "For part 1, we will use the UCSC Genome Browser to explore polymorphisms. The document for part 1 can be found in bcourses. \n",
-    "Please put your answers for part 1 here:"
+    "In this lab, we will use the UCSC Genome Browser to visualize polymorphisms in the HLA-A\n",
+    "and H2A proteins. By the end of this lab, you will have a better idea of sequence conservation\n",
+    "and how conservation differs across proteins.\n",
+    "\n",
+    "### Exploring HLA-A\n",
+    "\n",
+    "First, we will learn a little bit about the HLA-A gene.\n",
+    "\n",
+    "\n",
+    "1. To access the UCSC Genome Browser, go to [UCSC Genome Browser](http://genome.ucsc.edu/).\n",
+    "\n",
+    "2. Click on 'Genome Browser', highlighted in red in the image.\n",
+    "![UCSC Home Page](../images/lab2/ucscHomepage.png)\n",
+    "3. To reset the view and hide unused tracks, click the **hide all** button below the viewer.\n",
+    "![Hide All](../images/lab6/hideAll.png)\n",
+    "4. Type in **HLA-A** in the search bar, highlighted in red.\n",
+    "![UCSC Gateway](../images/lab2/ucscGateway.png)\n",
+    "5. In the resulting list of **Known Genes**, click on the first option. This should\n",
+    "redirect you back to the browser.\n",
+    "![View HLA](../images/lab6/viewHLA.png)\n",
+    "6. In the HLA-A track, click on the label for HLA-A. This should redirect you to a new screen. Given the information\n",
+    "on this screen, answer the following questions."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Part 1 Answers\n",
-    "\n",
-    "#### Questions: Exploring HLA-A\n",
-    "1.\n",
-    "\n",
-    "2.\n",
-    "\n",
-    "3.\n",
-    "\n",
-    "4.\n",
-    "\n",
-    "5.\n",
-    "\n",
-    "6.\n"
+    "### Questions: Exploring HLA-A"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Questions: HLA-A SNP Density\n",
-    "1.\n",
+    "<h2 style=\"color:red\">** Question 1**</h2> \n",
+    "What does 'HLA' stand for? **Note:** You may of to use external resources to find this.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2 style=\"color:red\">** Question 2**</h2> \n",
+    "What is the location (chromosome and position) of HLA-A?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2 style=\"color:red\">** Question 3**</h2> \n",
+    "How long is the gene?\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2 style=\"color:red\">** Question 4**</h2> \n",
+    "How many exons does HLA-A have?\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2 style=\"color:red\">** Question 5**</h2> \n",
+    "Out of the exons, describe the peptides resulting from the 2nd, 3rd and 4th exons of HLA-A. (e.g., exon 2 encodes for peptide ~BLANK~).\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2 style=\"color:red\">** Question 6**</h2> \n",
+    "What important roles do HLA-A play? **Note:** If you find that this page does not provide enough information\n",
+    "on the HLA-A gene, google to find more information.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, let's navigate back to the browser to explore variation of HLA-A.\n",
     "\n",
-    "2.\n",
-    "\n",
-    "3.\n",
-    "\n",
-    "4.\n",
-    "\n",
-    "5."
+    "1. Navigate back to the Genome Browser viewer by clicking the back arrow.\n",
+    "2. Scroll down to track options, below the visualization.\n",
+    "3. Navigate to the Variation section.\n",
+    "4. Toggle 'Common SNPs' and 'Flagged SNPs' to 'squish', as shown in the image.\n",
+    "![Variation][variation]\n",
+    "5. Scroll back up to the visualization to view HLA-A and associated SNPs."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Questions: HLA-A SNP Search\n",
-    "1.\n",
-    "\n",
-    "2.\n"
+    "### Questions: HLA-A SNP Density"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Questions: Exploring H2A\n",
-    "1.\n",
-    "\n",
-    "2.\n",
-    "\n",
-    "3.\n",
-    "\n",
-    "4.\n"
+    "<h2 style=\"color:red\">** Question 7**</h2> \n",
+    "What is a SNP?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2 style=\"color:red\">** Question 8**</h2> \n",
+    "What is a common SNP? A flagged SNP?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2 style=\"color:red\">** Question 9**</h2> \n",
+    "Make sure you are zoomed out so that you can see the whole HLA-A gene. In what areas to you see the highest density of SNPs?\n",
+    "Is there any reasoning behind this SNP distribution?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2 style=\"color:red\">** Question 10**</h2> \n",
+    "Do you see a greater density in any particular exons? If so, which two exons have the highest SNP density?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2 style=\"color:red\">** Question 11**</h2> \n",
+    "Navigate to [Microbiology Book](http://www.microbiologybook.org/bowers/mhc.htm), and find **Figure 2**. Read the caption and look at the Figure. What can you say about the exons with the greatest SNP density and the function of the domains that they produce?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, zoom in to HLA-A and click on any SNP. This should take you to a new page.\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Questions: H2A SNP Density\n",
-    "1.\n",
-    "\n",
-    "2.\n"
+    "### Questions: HLA-A SNP Search"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2 style=\"color:red\">** Question 12**</h2> \n",
+    "Let's get more information on the specific SNP you clicked on. What is the reference allele for this SNP?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2 style=\"color:red\">** Question 13**</h2> \n",
+    "What, if any, is the **Function** of this SNP? What does this function mean?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exploring H2A.\n",
+    "Now, we will explore H2A.\n",
+    "\n",
+    "1. Navigate back to the Genome Browser Viewer by clicking the back button.\n",
+    "1. Type in **H2A** in the search bar.\n",
+    "5. In the resulting list of **Known Genes**, click on the **second** option, called HIST3H2A. This should\n",
+    "redirect you back to the browser.\n",
+    "6. In the H2A track, click on the label for HIST3H2A. This should redirect you to a new screen. Given the information\n",
+    "on this screen, answer the following questions."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Questions: Exploring H2A"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2 style=\"color:red\">** Question 14**</h2> \n",
+    "What does 'HIST3H2A' stand for? **Note:** You may of to use external resources to find this."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2 style=\"color:red\">** Question 15**</h2> \n",
+    "What is the location (chromosome and position) of H2A?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2 style=\"color:red\">** Question 16**</h2> \n",
+    "How long is the gene?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2 style=\"color:red\">** Question 17**</h2> \n",
+    "What important roles does H2A play? **Note:** If this page does not provide enough information\n",
+    "on the H2A gene, google to find more information."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, let's navigate back to the browser to explore variation of H2A. Make sure that Common SNPs and Flagged SNPs are still being displayed.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Questions: H2A SNP Density\n",
+    "\n",
+    "Navigate back to the Genome Browser Viewer by clicking the back arrow in your browser.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2 style=\"color:red\">** Question 18**</h2> \n",
+    "Zoom out to see the whole H2A gene. In what areas, if any, to you see the highest density of SNPs?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2 style=\"color:red\">** Question 19**</h2> \n",
+    "How does the SNP distribution in H2A compare to the distribution of HLA-A? Are there any reasons you can think of for why these distributions may differ?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -141,7 +421,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Question 1\n",
+    "<h2 style=\"color:red\">** Question 20**</h2> \n",
     "\n",
     "Why might a multiple sequence alignment (MSA) algorithm be used instead of a sequence alignment algorithm that just aligns two sequences?\n"
    ]
@@ -157,7 +437,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Question 2\n",
+    "<h2 style=\"color:red\">** Question 21**</h2> \n",
     "\n",
     "Take a look at the T-coffee website (http://tcoffee.vital-it.ch/apps/tcoffee/references.html) and give a summary about what their algorithm does.\n"
    ]
@@ -172,14 +452,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# load in sequence data for HLA-A\n",
     "# load in data\n",
-    "table = Table.read_table('https://raw.githubusercontent.com/data-8/mcb-88-connector/gh-pages/data/lab4/hla-a_msa.csv')\n",
+    "table = Table.read_table('https://raw.githubusercontent.com/data-8/mcb-88-connector/gh-pages/data/lab6/hla-a_msa.csv')\n",
     "table\n"
    ]
   },
@@ -197,9 +475,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Function that calculates the number of differences between three sequences. \n",
@@ -233,16 +509,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Question 3\n",
+    "<h2 style=\"color:red\">** Question 22**</h2> \n",
     "Fill in the blanks below to plot the difference vector across the three HLA-A sequences."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# TODO: Select sequences\n",
@@ -262,7 +536,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Question 4\n",
+    "<h2 style=\"color:red\">** Question 23**</h2> \n",
     "How does this sample distribution of mismatches compare to the actual distribution for HLA-A we saw in the UCSC Genome Browser?\n",
     "\n",
     "Answer:"
@@ -272,7 +546,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Question 5\n",
+    "<h2 style=\"color:red\">** Question 24**</h2> \n",
     "\n",
     "Based on the distribution of mismatches for these three sequences for HLA-A, how would you expect the mismatch distribution for H2A to look?"
    ]
@@ -289,7 +563,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Bonus Question 1\n",
+    "<h2 style=\"color:red\">** Bonus Question 1**</h2> \n",
     "\n",
     "Choose a SNP overlapping HLA-A from the UCSC Genome Browser (This can be the same SNP you chose in part 1 of the lab.)\n",
     "Does this SNP appear in any of the sequences above? How can you verify this?"
@@ -298,9 +572,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -321,9 +593,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
