updated clustering data

--- a/notebooks/Lab3.ipynb
+++ b/notebooks/Lab3.ipynb
@@ -54,7 +54,6 @@
    "source": [
     "# load in data for part 1\n",
     "table1 = Table.read_table('https://raw.githubusercontent.com/data-8/mcb-88-connector/gh-pages/data/lab3/rnaseq_Tcell_quantifications.csv')\n",
-    "\n",
     "table1"
    ]
   },
@@ -63,7 +62,7 @@
    "metadata": {},
    "source": [
     "### What do the table headers mean?\n",
-    "For each gene, we are given a gene symbol and description. We are also given a value for each time point in each cell type. These values are drawn from microarray experiments, and measure the flourescence of hybridization of each gene to a probe. The higher the measure of flourescence, the greater the expression of RNA at that probe."
+    "For each gene, we are given a gene symbol and description. We are also given a value for each time point in each cell type. These values are drawn from microarray experiments, and measure the flourescence of hybridization of each gene to a probe. The higher the measure of flourescence, the greater the expression of RNA at that probe. Note that all probes are specific to a given gene."
    ]
   },
   {
@@ -147,7 +146,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer here:**\n"
+    "Answer:\n"
    ]
   },
   {
@@ -162,21 +161,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer here:**\n"
+    "Answer:\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Part 2: K Means Clustering of Gene Expression"
+    "# Part 2: K Means Clustering of Microarray Probe Intensities"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For part 2 of the lab, we will cluster genes based on their expression over 100 days. The goal of this exercise is to find relationships among genes using k-means clustering. A description of k-means clustering can be found here: \n",
+    "For part 2 of the lab, we will cluster genes based on their gene specific probe intensities over 100 days. The goal of this exercise is to find relationships among genes using k-means clustering. A description of k-means clustering can be found here: \n",
     "We will be using the sklearn implementation: http://scikit-learn.org/stable/modules/generated/sklearn.cluster.KMeans.html"
    ]
   },
@@ -184,7 +183,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First, we will load in the data for a subset of our genes."
+    "First, we will load in the data for a subset of the probes. We will use these to filter our original dataset."
    ]
   },
   {
@@ -193,17 +192,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# load in a list of gene symbols we are interested in clustering\n",
-    "with open('../data/lab3/cluster_genes.csv') as f:\n",
-    "    geneSymbols = f.read()\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Next, we will filter our data to contain only genes that we have selected in the list above. "
+    "# load in a list of probe IDs we are interested in clustering\n",
+    "fileProbes = Table.read_table('https://raw.githubusercontent.com/data-8/mcb-88-connector/gh-pages/data/lab3/cluster_probes.csv')\n",
+    "\n",
+    "# get the probe IDs from the table and convert to a list\n",
+    "filteredProbes = list(fileProbes.to_df().columns)\n",
+    "filteredProbes = list(map(int, filteredProbes))\n",
+    "filteredProbes"
    ]
   },
   {
@@ -213,16 +208,15 @@
    "outputs": [],
    "source": [
     "# filter the data with the selected gene symbols\n",
-    "#table1.where(table1[\"GeneSymbol\"].isin(list))\n",
-    "allSymbols = table1[\"GeneSymbol\"].tolist() \n",
+    "allProbes = table1[\"ProbeSetID\"].tolist() \n",
     "\n",
     "# make empty list to hold booleans for geneSymbols\n",
-    "bools = list(range(len(allSymbols)))\n",
+    "bools = list(range(len(allProbes)))\n",
     "\n",
     "# assign bools to whether or not gene symbol was found\n",
     "# in our filtered list geneSymbols\n",
-    "for index, i in enumerate(allSymbols):\n",
-    "    if i in geneSymbols:\n",
+    "for index, i in enumerate(allProbes):\n",
+    "    if i in filteredProbes:\n",
     "        bools[index] = True\n",
     "    else:\n",
     "        bools[index] = False\n",
@@ -267,7 +261,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, we will plot time series data for cluster 0 over time from 0 to 100 days of incubation."
+    "Now, we will plot time series data for cluster 1 over time from 0 to 100 days of incubation."
    ]
   },
   {
@@ -351,16 +345,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Answer here:\n",
-    "\n"
+    "# Answer here:\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2 style=\"color:red\">** Question 8**</h2> \n",
-    "\n",
+    "<h2 style=\"color:red\">** Question 8**</h2> "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Which clusters have the most genes in them? Which cluster have the fewest genes in them?"
    ]
   },
@@ -368,7 +366,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer here:**\n"
+    "**Answer here:**"
    ]
   },
   {
@@ -383,7 +381,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer here:**\n"
+    "**Answer here:**"
    ]
   },
   {
@@ -398,23 +396,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer here:**\n",
-    "   "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<h2 style=\"color:red\">** Question 11**</h2> \n",
-    "\n",
-    "Some genes (such as Klf3) have different probes in different clusters. What sources of variation could create the same genes to be clustered differently? Is there a way to aggregate probes together such that genes do not get spit across clusters?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "**Answer here:**"
    ]
   },
@@ -422,7 +403,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2 style=\"color:red\">** Question 12**</h2> \n",
+    "<h2 style=\"color:red\">** Question 11**</h2> \n",
     "\n",
     "Pick one of the 10 clusters defined in the paper. Give a description of the category from the paper and explain one of its genes. \n"
    ]
@@ -440,12 +421,21 @@
     "collapsed": true
    },
    "source": [
-    "<h2 style=\"color:red\">** Question 13**</h2> \n",
+    "<h2 style=\"color:red\">** Question 12**</h2> \n",
     "On a scale from 1 to 10 (1 being worst, 10 being best), please rate this lab in terms of its:\n",
     "1. Clarity\n",
     "2. Difficulty\n",
     "3. Length\n",
     "4. Insight"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "**Answer here:**"
    ]
   },
   {
