--- a/notebooks/Lab5.ipynb
+++ b/notebooks/Lab5.ipynb
@@ -4,338 +4,344 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Lab 3: Sequence Alignment of p53 Protein"
+    "# How Cells Divide\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# imports\n",
+    "from datascience import Table\n",
+    "import matplotlib\n",
+    "matplotlib.use('Agg')\n",
+    "from datascience import Table\n",
+    "%matplotlib inline\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "plt.style.use('fivethirtyeight')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For this lab, we will be aligning multiple variations of the p53 protein sequence. The p53 protein is a tumor suppressor protein. To learn more about p53, see https://en.wikipedia.org/wiki/TP53.\n",
+    "In this lab, we will be looking and RNA-seq data from three phases of cell division: G1, G2 and M phases.\n",
     "\n",
-    "Additionally, look here for a more in depth description of p53 mutants: http://genesdev.cshlp.org/content/26/12/1268.full"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false
-   },
-   "source": [
-    "Our data will come from the NCBI database (see https://www.ncbi.nlm.nih.gov/protein). For this lab, we take multiple isoforms of the p53 protein sequence and compare their sequence differences."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "## Importing the Dependencies"
+    "The data in this lab is from Regulation of mRNA translation during mitosis by Tanenbaum et al. This paper can be found at https://elifesciences.org/articles/07957. Data for this lab was taken from GEO and can be found at https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE67902."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# imports\n",
-    "from datascience import Table\n"
+    "# Read in csv file into a table\n",
+    "table = Table.read_table('https://raw.githubusercontent.com/data-8/mcb-88-connector/gh-pages/data/lab5/GSE67902_Supplemental_table_S1_mRNA_analysis.csv')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# load in data for part 1\n",
-    "table = Table.read_table('https://raw.githubusercontent.com/data-8/mcb-88-connector/gh-pages/data/lab3/p53_sequences.csv')\n",
     "table"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "source": [
-    "# Part 1: Distances Between Sequences"
+    "<h2 style=\"color:red\">** Question 1**</h2> \n",
+    "What does M, G1 and G2 stand for? Breifly describe each of these three phases."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "One approach to calculating distance between sequences is Hamming Distance. The hamming distance between two strings of equal length is the number of positions in which they differ. \n",
+    "**Answer here:**\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2 style=\"color:red\">** Question 2**</h2> \n",
+    "Name and explain the 4 basic phases of mitosis."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "** Answer here:**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Looking at the data\n",
     "\n",
-    "For example, 'Hello, Dolly!' and 'Help-, Dolly!' have Hamming Distance 2."
+    "Notice that the table has 6 numerical columns. The first 3 numeric columns are RPKM values. The next three columns are total read counts."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Question 1\n",
-    "Calculate the hamming distance **(by hand)** for DNA sequences \"ATGCCCCCG\" and \"ATGAACCCC\"."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Answer: "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The function below calculates the Hamming Distance between two strings."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# function that calculates the distance between 2 strings s1 and s2\n",
-    "def hammingDistance(s1, s2):\n",
-    "    '''For two strings s1 and s2, output the number of position that they differ in.\n",
-    "    Strings s1 and s2 must be the same length.'''\n",
-    "    if len(s1)!=len(s2):\n",
-    "        return('The input strings are not of the same length.')\n",
-    "    else:\n",
-    "        return(sum([i!=j for i,j in zip(s1, s2)]))\n",
-    "    \n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "This next function, called visualizeHammingDistance(), visualizes the locations of the differences between two strings."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# function that visualizes the differences between two strings s1 and s2\n",
-    "def visualizeHammingDistance(expected, actual):\n",
-    "    if len(expected)!=len(actual):\n",
-    "        return('The input strings are not of the same length.')\n",
-    "    diff = list('-') * len(expected)\n",
-    "    \n",
-    "    # convert strings to lists of chars\n",
-    "    expectedArray = list(expected)\n",
-    "    actualArray = list(actual)\n",
-    "    \n",
-    "    # zip lists together\n",
-    "    zipped = zip(expectedArray, actualArray)\n",
-    "    \n",
-    "    # for each char, if different, add to list of characters\n",
-    "    for i, n in enumerate(zipped):\n",
-    "        if n[0]!=n[1]: \n",
-    "            diff[i]=n[1]\n",
-    "    \n",
-    "    return ''.join(diff)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Using the 'Hello, Dolly!', we will calculate the hamming distance:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "hammingDistance('Hello, Dolly!','Help-, Dolly!')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Question 2\n",
-    "Make sure that you get the same distance from the strings in **Question 1** using the hammingDistance() function."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# Answer: "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Question 3\n",
+    "<h2 style=\"color:red\">** Question 3**</h2> \n",
     "\n",
-    "Using the visualizeHammingDistance() function, visualize the difference in the two DNA sequences from **Question 1**.\n",
-    "Does the output change if you switch the order of inputs in the function?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# Answer:"
+    "What does RPKM stand for? How are these values different from the total read counts?"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Part 2: Calculating the distance between p53 sequences."
+    "**Answer here:**"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, let's look at the protein sequences for p53."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Question 4\n",
-    "Lookup p53 online and list some of the traits and functions of p53. Start here for a resource:  https://en.wikipedia.org/wiki/TP53."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Answer:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Question 5\n",
-    "Given the sequence descriptions in the table, what are the two main types of mutations we can see in these sequences?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Answer:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Question 6\n",
-    "Search for these mutations listed in the table descriptions. What are the difference between these two mutations?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Answer:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Question 7\n",
-    "Calculate the hamming distance for all pairs of sequences in the table. There are 6 total comparisons."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# Answer"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Question 8\n",
-    "A. Using the visualize visualizeHammingDistance() function, visualize the difference between all pairs of sequences in the table and print out the results. There are 6 total comparisons.\n",
+    "<h2 style=\"color:red\">** Question 4**</h2> \n",
     "\n",
-    "B. From these comparisons, can you pinpoint the location of the mutations discovered in **Question 5**?"
+    "Why might we prefer using RPKM values, instead of total read counts, when comparing mitosis phases for RNA-seq data?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Answer here:**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Genes Upregulated in the G1 Checkpoint\n",
+    "\n",
+    "Next, we will find all genes that are up-regulated in the G1 checkpoint. To do this, we will calculate the ratio of RPKM in G1 compared to the M phase, and filter by genes where the fraction G1/M > 2."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# A. Answer: sequence comparison"
+    "# append a column with the ratio G1 RPKM/M RPKM\n",
+    "table.append_column('G1/M', table['G1 mRNA RPKM']/table['M mRNA RPKM'])\n",
+    "\n",
+    "# now, filter the table by sites where this ratio is > 2\n",
+    "filteredG1 = table.where(table['G1/M'] > 2)\n",
+    "\n",
+    "filteredG1"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "B. Answer: "
+    "<h2 style=\"color:red\">** Question 5**</h2> \n",
+    "\n",
+    "Why might we be filtering for genes a ratio of G1/M > 2, instead of 1, to discover genes upregulated in G1 phase?"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Question 9 \n",
-    "On a scale from 1 to 10 (1 being worst, 10 being best), please rate this lab in terms of its:\n",
-    "1. Clarity\n",
-    "2. Difficulty\n",
-    "3. Length\n",
-    "4. Insight"
+    "**Answer here:**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
-    "Answer:"
+    "<h2 style=\"color:red\">** Question 6**</h2> \n",
+    "\n",
+    "For how many genes is G1 expression greater than in the M phase? (count the rows in the filtered table we produced above)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Answer here\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2 style=\"color:red\">** Question 7**</h2> \n",
+    "\n",
+    "Run a similar comparison analysis to the one above for G2 phase: find all of the genes that are up-regulated in G2 phase, compared to M. Print the number of genes that are up-regulated."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Answer here:\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Finding similarities in gene expression in the G1 and G2 Phase\n",
+    "\n",
+    "Next, we will find the intersection of genes that are up-regulated in both the G1 and G2 phase. To do this, we will use the intersect() function defined below. This function takes in 2 parameters: two lists."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def intersect(a, b):\n",
+    "    \"\"\" return the intersection of two lists \"\"\"\n",
+    "    return list(set(a) & set(b))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As an example, say we have two lists, geneList1 and geneList2. We can use this function to calculate the intersection:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "geneList1 = [\"TP53\", \"TRIM52\", \"RRAD\"]\n",
+    "geneList2 = [\"TP53\", \"TRIM52\", \"DUSP5\"]\n",
+    "\n",
+    "intersect(geneList1, geneList2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This means that there are two genes that appear in both lists: TRIM52 and TP53."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2 style=\"color:red\">** Question 8**</h2> \n",
+    "\n",
+    "Using the intersect() function, find the intersection of genes that are up-regulated in both G1 and G2."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Answer here:\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2 style=\"color:red\">** Question 9**</h2> \n",
+    "\n",
+    "Go to genecards (http://www.genecards.org/) and search for gene CDKN1A. This gene should be on your list printed in question 8. Give a short description of the gene as it relates to checkpointing.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Answer here**:\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2 style=\"color:red\">** Question 10**</h2> \n",
+    "Now, on genecards (http://www.genecards.org/) search for p53 and navigate to the section called 'Function'. Read this section. According to this paragraph, is p53 important in G1, G2, or both stages?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "** Answer here: **\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2 style=\"color:red\">** Question 11**</h2> \n",
+    "Now, flter the original data table for the p53 gene. Does the data in this row support or contradict the p53's role in G1 and G2? Explain."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Answer here:\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Explain answer here:**\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2 style=\"color:red\">** Question 12**</h2> \n",
+    "Given what you know about G1 and G2 phases, how might you expect the RNA expression of checkpoint genes to change in cancer cells?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "** Answer here: **\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -354,9 +360,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 2
 }
